grease pencil brush crash #59396

Closed
opened 2018-12-15 01:09:21 +01:00 by why? · 3 comments

System Information
Operating system: win 10
Graphics card: gtx 670

Blender Version
Broken: version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-14 16:29, , type: Release

Worked: (optional)

Short description of error
after deleting used brush and selecting new one blender crashes
Exact steps for others to reproduce the error
new 2d animation>draw something > two arrows to the right>draw> select on left panel active tool (brushes) > click x to delete> create new one> click on brush picture( blank)>select just created >crush

**System Information** Operating system: win 10 Graphics card: gtx 670 **Blender Version** Broken: version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-14 16:29, , type: Release Worked: (optional) **Short description of error** after deleting used brush and selecting new one blender crashes **Exact steps for others to reproduce the error** new 2d animation>draw something *> two arrows to the right>draw>* select on left panel active tool (brushes) > click x to delete> create new one> click on brush picture( blank)>select just created >crush
Author

Added subscriber: @ludrol

Added subscriber: @ludrol
Antonio Vazquez self-assigned this 2018-12-15 09:43:15 +01:00

This issue was referenced by f9917a8d43

This issue was referenced by f9917a8d431f5480d9a5d58dfcf84863911f3bf2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59396
No description provided.