Fix T59396 Grease pencil brush crash

The problem was the brush was not initializated because some code was missing (marked as ToDo)